--- a/src/main/resources/com/notynote/gycalculator/main-view.fxml
+++ b/src/main/resources/com/notynote/gycalculator/main-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,21 +9,26 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="720.0" prefWidth="405.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.notynote.gycalculator.MainController">
    <children>
       <VBox prefHeight="920.0" prefWidth="405.0">
          <children>
-            <StackPane prefHeight="150.0" prefWidth="405.0">
+            <StackPane prefHeight="200.0" prefWidth="405.0">
                <children>
-                  <VBox alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="405.0">
+                  <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="405.0">
                      <children>
-                        <Label text="0" textAlignment="CENTER">
+                        <Text fx:id="currentSum" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Sum">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="sumText" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER">
                            <font>
                               <Font size="64.0" />
                            </font>
-                        </Label>
+                        </Text>
                      </children>
                      <padding>
                         <Insets right="20.0" />
@@ -34,46 +38,22 @@
             </StackPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="7">
+                  <Button fx:id="seven" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="7">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="8">
+                  <Button fx:id="eight" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="8">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="9">
+                  <Button fx:id="nine" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="9">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="CLEAR">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="4">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="5">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="6">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="+">
+                  <Button fx:id="clear" mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="CLEAR">
                      <font>
                         <Font size="22.0" />
                      </font>
@@ -82,22 +62,46 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="1">
+                  <Button fx:id="four" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="4">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="2">
+                  <Button fx:id="five" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="5">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="3">
+                  <Button fx:id="six" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="6">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="-">
+                  <Button fx:id="plus" mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="+">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="one" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="1">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="two" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="2">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="three" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="3">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="minus" mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="-">
                      <font>
                         <Font size="22.0" />
                      </font>
@@ -106,61 +110,51 @@
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="460.0" prefHeight="100.0" prefWidth="405.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="+1">
+                  <Button fx:id="plusOne" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="+1">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="+2">
+                  <Button fx:id="plusTwo" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="+2">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="+3">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="0">
+                  <Button fx:id="zero" mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="0">
                      <font>
                         <Font size="22.0" />
                      </font>
                      <HBox.margin>
-                        <Insets />
+                        <Insets left="100.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="-1">
+                  <Button fx:id="minusOne" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="-1">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="-2">
+                  <Button fx:id="minusTwo" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="-2">
                      <font>
                         <Font size="22.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="-3">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="=">
+                  <Button fx:id="equal" mnemonicParsing="false" prefHeight="100.0" prefWidth="105.0" text="=">
                      <font>
                         <Font size="22.0" />
                      </font>
                      <HBox.margin>
-                        <Insets />
+                        <Insets left="100.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="270.0" prefWidth="405.0">
+            <HBox alignment="CENTER" prefHeight="220.0" prefWidth="405.0">
                <children>
-                  <ImageView fitHeight="248.0" fitWidth="295.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="206.0" fitWidth="241.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@axiechart.png" />
                      </image>
